--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,7 @@
     { "source": "/proxy/:match/:url*", "destination": "https://:match/:url*" },
     { "source": "/proxy/:match/:url*/", "destination": "https://:match/:url*/" },
     { "source": "/httpproxy/:match/:url*", "destination": "http://:match/:url*" },
-    { "source": "/httpproxy/:match/:url*/", "destination": "http://:match/:url*/" }
+    { "source": "/httpproxy/:match/:url*/", "destination": "http://:match/:url*/" },
+    { "source": "/ws/:match/:url*/", "destination": "wss://:match/:url*/" }
   ]
 }
